logs/offboard_pkg/build.make.507.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::get_param()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:24:5: error: ‘private_nh’ was not declared in this scope
   24 |     private_nh.getParam("safe_error_dis", safe_error_dis_list);
      |     ^~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
